--- a/Lab_Management.v1/src/main/resources/static/css/experiment.css
+++ b/Lab_Management.v1/src/main/resources/static/css/experiment.css
@@ -60,7 +60,7 @@
     --light: red;
 }
 
-[data-theme=dark] {
+[data-theme=darkAdmin] {
     --white: rgba(33, 33, 33, 0.89);
     --black: white;
     --gray: black;
