--- a/Lab_Management.v1/src/main/resources/templates/headernew.html
+++ b/Lab_Management.v1/src/main/resources/templates/headernew.html
@@ -51,7 +51,7 @@
     </style>
     <br>
     <br>
-    <div style="background-color: rgba(255,255,255,0.6)">
+    <div class="nav-bar-header">
     <!--  header middle -->
     <div class="el-middle-header container container-xxxl">
         <div>
@@ -82,7 +82,7 @@
                     <div class="d-none d-lg-flex flex-column">
                         <a href="/Lab?RedirectLabAdmin=false">
                         <strong>
-                            <span class="title">Đặt lịch phòng thí nghiệm</span>
+                            <span class="title text-title">Đặt lịch phòng thí nghiệm</span>
                         </strong>
                         </a>
                     </div>
@@ -96,7 +96,7 @@
                     <div class="d-none d-lg-flex flex-column">
                         <a th:href="'/Lab/mybooking?username='+${#authentication.name}">
                         <strong>
-                            <span class="title">Đặt lịch của tôi</span>
+                            <span class="title text-title">Đặt lịch của tôi</span>
                         </strong>
                         </a>
                     </div>
