--- a/Lab_Management.v1/src/main/resources/templates/admin/booking-management.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/booking-management.html
@@ -13,10 +13,10 @@
 
 <management><!--<div th:replace="admin/templateAdmin.html :: header-admin"></div>-->
     <style>
-        .title-h1{margin-top: 50px;  font-weight: bold; } .quantity-h1 { font-size: 2em; margin-top: 0; } .pending { color: #af6d09; } .approve { color: green; } .cancel { color: red; }
-        .title-h1.pending { background-color: #ffca95; display: inline-block; padding: 5px 10px; border-radius: 50px; }
-        .title-h1.approve { background-color: #baff82; display: inline-block; padding: 5px 10px; border-radius: 50px; }
-        .title-h1.cancel { background-color: #ffb8b3; display: inline-block; padding: 5px 10px; border-radius: 50px; }
+        .title-h1{margin-top: 50px;  font-weight: bold; text-transform: uppercase;} .quantity-h1 { font-size: 2em; margin-top: 0; } .pending { color: #af6d09; } .approve { color: green; } .cancel { color: red; }
+        /*.title-h1.pending { background-color: #ffca95; display: inline-block; padding: 5px 10px; border-radius: 50px; }*/
+        /*.title-h1.approve { background-color: #baff82; display: inline-block; padding: 5px 10px; border-radius: 50px; }*/
+        /*.title-h1.cancel { background-color: #ffb8b3; display: inline-block; padding: 5px 10px; border-radius: 50px; }*/
     </style>
     <div class="row">
         <div class="col-12 d-flex flex-column align-content-center">
