--- a/Lab_Management.v1/src/main/resources/templates/admin/labs.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/labs.html
@@ -12,7 +12,7 @@
 <body class="scroll-container">
 
 <lab><!--<div th:replace="admin/templateAdmin.html :: header-admin"></div>-->
-    <h1 style="margin-top: 50px; text-align: center;" th:text="'Danh sách phòng thí nghiệm' "></h1>
+    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;" th:text="'Danh sách phòng thí nghiệm' "></h1>
     <h1 style=" text-align: center; font-size: 2em" th:text="'Số lượng: ' + ${#lists.size(labDTOS)}"></h1>
     <br>
     <div class="row">
