--- a/Lab_Management.v1/src/main/resources/templates/admin/equipment-edit-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipment-edit-form.html
@@ -15,31 +15,47 @@
 <body class="scroll-container">
 <equipment-edit-form>
     <!--<div th:replace="admin/headerAdmin :: header-admin"></div>-->
-    <h1 style="margin-top: 50px; text-align: center;">Thông tin Thiết bị</h1><br>
+    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;">Thông tin Thiết bị</h1><br>
     <div class="container">
         <form th:object="${equipment}" th:action="@{'/Lab/admin/Equipment/showFormForUpdate/'+ ${equipment.getId}}" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <h4 for="name">Tên phòng thiết bị:</h4>
                 <input type="text" class="form-control" id="name" name="name" required
-                       th:value="*{getName}">
+                       th:value="*{getName}" style="font-weight: bold">
             </div>
             <div class="main-card mb-3 card form-group">
                 <div class="card-body">
                     <h4 for="description">Mô tả:</h4>
-                    <textarea rows="1" class="form-control autosize-input" style="height: 35px;"
+                    <textarea rows="1" class="form-control autosize-input" style="height: 35px; font-weight: bold"
                               id="description" name="description" required
                               th:text="*{getDescription}"
                     ></textarea>
                 </div>
             </div>
+            <div class="main-card mb-3 card form-group">
+                <div class="card-body">
+                    <h4 for="description">Xuất xứ:</h4>
+                    <input rows="1" class="form-control autosize-input" style="height: 35px;font-weight: bold"
+                           id="origin" name="origin" required
+                           th:value="*{getOrigin}"
+                    >
+                </div>
+            </div>
             <div class="form-group seriesDiv ">
-                <h4 for="series">Danh sách seri máy:</h4>
+                <h4 for="series">Danh sách seri máy và phân cấp loại trang bị <span class="text-danger"> (Chưa được biên chế)</span> :</h4>
                 <div class="d-flex flex-row flex-wrap justify-content-start row">
-                    <th:block th:each="seri : ${equipment.getEquipmentSerieList}">
+                    <th:block th:each="seri, iter : ${equipment.getEquipmentSerieList}">
                         <div class="inputseri d-flex flex-row flex-wrap justify-content-start">
-                            <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="Seri2Fix(this)"> <i class="fa fa-wrench"></i> </button>
                             <input type="search" class="form-control m-3 col-sm-6" id="series" name="series" required
                                    th:value="${seri}" style="font-weight: bold">
+                            <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="Seri2Fix(this)"> <i class="fa fa-wrench"></i> </button>
+                            <select class="form-control m-3 col-sm-6" id="levels" name="levels" required>
+                                <option value="Cấp 1" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 1'}">Cấp 1</option>
+                                <option value="Cấp 2" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 2'}">Cấp 2</option>
+                                <option value="Cấp 3" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 3'}">Cấp 3</option>
+                                <option value="Cấp 4" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 4'}">Cấp 4</option>
+                                <option value="Cấp 5" th:selected="${equipment.getLevelList[iter.index] == 'Cấp 5'}">Cấp 5</option>
+                            </select>
                             <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="removeSeri(this)"> <i class="fa fa-times-circle"></i> </button>
                         </div>
                     </th:block>
@@ -64,7 +80,7 @@
                     box-shadow: -1.5em 0 5px 2px rgba(0, 0, 125, 0.2);
                 }
             </style>
-            <button type="submit" class="btn btn-primary" onclick="return confirm('Bạn có chắc chắn sửa?')">Sửa</button>
+            <button type="submit" class="btn btn-primary" id="submitButton">Sửa</button>
         </form>
     </div>
 
