--- a/Lab_Management.v1/src/main/resources/templates/admin/equipment-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipment-form.html
@@ -15,7 +15,7 @@
 <body class="scroll-container">
 <equipment-form>
     <!--<div th:replace="admin/headerAdmin :: header-admin"></div>-->
-    <h1 style="margin-top: 50px; text-align: center;">Thêm Thiết bị</h1><br>
+    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;">Thêm Thiết bị</h1><br>
     <div class="container">
         <form th:action="@{'/Lab/admin/Equipment/add'}" method="post" enctype="multipart/form-data">
             <div class="form-group">
@@ -32,6 +32,15 @@
                     ></textarea>
                 </div>
             </div>
+            <div class="main-card mb-3 card form-group">
+                <div class="card-body">
+                    <h4 for="description">Xuất xứ:</h4>
+                    <input rows="1" class="form-control autosize-input" style="height: 35px;"
+                              id="origin" name="origin" required
+                              th:placeholder="'Việt Nam'"
+                    >
+                </div>
+            </div>
             <div class="form-group seriesDiv ">
                 <h4 for="series">Nhập đúng chuỗi seri như mẫu:</h4>
                 <div class="d-flex flex-row flex-wrap justify-content-start row">
@@ -39,6 +48,13 @@
                         <input type="search" class="form-control m-3 col-sm-6" id="series" name="series" required
                                th:placeholder="'seri mới'" style="font-weight: bold">
                         <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="removeSeri(this)"> <i class="fa fa-times-circle"> </i> </button>
+                        <select class="form-control m-3 col-sm-6" name="levels" required>
+                            <option value="Cấp 1">Cấp 1</option>
+                            <option value="Cấp 2">Cấp 2</option>
+                            <option value="Cấp 3">Cấp 3</option>
+                            <option value="Cấp 4">Cấp 4</option>
+                            <option value="Cấp 5">Cấp 5</option>
+                        </select>
                     </div>
                     <button type="button" class="btn btn-primary m-3" onclick="addInput(this)"> <i class="fa fa-plus-circle"></i> </button>
                 </div>
@@ -67,19 +83,40 @@
                     input.setAttribute('style', 'font-weight : bold');
                     input.setAttribute('placeholder', "seri mới");
 
+                    var input = document.createElement('input');
+                    input.type = 'text';
+                    input.setAttribute('class', 'form-control m-3 col-sm-6');
+                    input.name = 'series';
+                    input.required = true;
+                    input.setAttribute('style', 'font-weight : bold');
+                    input.setAttribute('placeholder', "seri mới");
+
                     var btnremove = document.createElement('button');
                     btnremove.setAttribute('type', 'button');
                     btnremove.setAttribute('class', 'btnremove btn btn-primary my-3 col-sm-2');
                     btnremove.addEventListener('click', function() {
                         removeSeri(this);
                     });
-
                     var icon_btnremove = document.createElement('i');
                     icon_btnremove.setAttribute('class', 'fa fa-times-circle');
                     btnremove.appendChild(icon_btnremove);
 
+                    var select = document.createElement('select');
+                    select.setAttribute('class', 'form-control m-3 col-sm-6');
+                    select.name = 'levels';
+                    select.required = true;
+
+                    var options = ['Cấp 1', 'Cấp 2', 'Cấp 3', 'Cấp 4', 'Cấp 5'];
+                    options.forEach(function(option) {
+                        var opt = document.createElement('option');
+                        opt.value = option;
+                        opt.text = option;
+                        select.add(opt);
+                    });
+
                     div_inputseri.appendChild(input);
                     div_inputseri.appendChild(btnremove);
+                    div_inputseri.appendChild(select);
 
                     formGroup.insertBefore(div_inputseri, button);
                 }
