--- a/Lab_Management.v1/src/main/resources/templates/admin/equipments.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipments.html
@@ -12,7 +12,7 @@
 <body class="scroll-container">
 
 <equipment><!--<div th:replace="admin/templateAdmin.html :: header-admin"></div>-->
-    <h1 style="margin-top: 50px; text-align: center;" th:text="'Danh sách các thiết bị'"> </h1>
+    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;" th:text="'Danh sách thiết bị Chưa được sử dụng'"> </h1>
     <h1 style=" text-align: center; font-size: 2em" th:text="'Số lượng: ' + ${#lists.size(allEquipment)}"></h1>
     <br>
     <div class="row">
@@ -53,15 +53,22 @@
                         <td th:text="${equi.description}"></td>
                         <td>
                             <div class="d-flex" style="display: flex; justify-content: center; align-items: center;">
-                                <form th:action="@{'/Lab/admin/Equipment/showFormForUpdate/' + ${equi.getId}}" method="get">
-                                    <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
-                                </form>
-                                <form sec:authorize="hasRole('ROLE_ADMIN')"
-                                        th:action="@{'/Lab//admin/Equipment/delete/' + ${equi.getId}}" method="POST">
-                                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc chắn muốn xóa?')">
-                                        Xóa
-                                    </button>
-                                </form>
+                                <th:block th:if="${#request.requestURI == '/Lab/admin/Equipment'}">
+                                    <form th:action="@{'/Lab/admin/Equipment/showFormForUpdate/' + ${equi.getId}}" method="get">
+                                        <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
+                                    </form>
+                                    <form sec:authorize="hasRole('ROLE_ADMIN')"
+                                          th:action="@{'/Lab//admin/Equipment/delete/' + ${equi.getId}}" method="POST">
+                                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc chắn muốn xóa?')">
+                                            Xóa
+                                        </button>
+                                    </form>
+                                </th:block>
+                                <th:block th:if="${#request.requestURI == '/Lab/admin/AllEquipment'}">
+                                    <form th:action="@{'/Lab/admin/AllEquipment/showFormForUpdate/' + ${equi.getId}}" method="get">
+                                        <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
+                                    </form>
+                                </th:block>
                             </div>
                         </td>
                     </tr>
@@ -82,7 +89,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!--Phải load jquery trước khi load bootstrap js-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script th:src="@{/js/script.js}"></script>
     <div style="margin: 20px">
         <!-- Add a Logout button -->
         <form action="#" th:action="@{/logout}" method="POST">
