--- a/Lab_Management.v1/src/main/resources/templates/admin/booking-management.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/booking-management.html
@@ -13,7 +13,7 @@
 
 <management><!--<div th:replace="admin/templateAdmin.html :: header-admin"></div>-->
     <style>
-        .title-h1{margin-top: 50px;  font-weight: bold; text-transform: uppercase;} .quantity-h1 { font-size: 2em; margin-top: 0; } .pending { color: #af6d09; } .approve { color: green; } .cancel { color: red; }
+        .title-h1{margin-top: 50px;  font-weight: bold; text-transform: uppercase;} .quantity-h1 { font-size: 2em; margin-top: 0; } .pending { color: #af6d09; } .approve { color: green; } .cancel { color: red; } .wait { color: #ffe500; border: thick black }
         /*.title-h1.pending { background-color: #ffca95; display: inline-block; padding: 5px 10px; border-radius: 50px; }*/
         /*.title-h1.approve { background-color: #baff82; display: inline-block; padding: 5px 10px; border-radius: 50px; }*/
         /*.title-h1.cancel { background-color: #ffb8b3; display: inline-block; padding: 5px 10px; border-radius: 50px; }*/
@@ -27,6 +27,10 @@
             <div style="margin: auto">
                 <h1 class="title-h1 approve" th:if="${#request.requestURI == '/Lab/admin/LabBookingManagement/Approve'}"
                     th:text="'Danh sách đã duyệt' "></h1>
+            </div>
+            <div style="margin: auto">
+                <h1 class="title-h1 wait" th:if="${#request.requestURI == '/Lab/admin/LabBookingManagement/WaitComfirmUsed'}"
+                    th:text="'Danh sách chờ xác nhận sử dụng' "></h1>
             </div>
             <div style="margin: auto">
                 <h1 class="title-h1 cancel" th:if="${#request.requestURI == '/Lab/admin/LabBookingManagement/Cancel'}"
@@ -57,16 +61,22 @@
             <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered">
                 <thead>
                     <tr>
+                        <th>STT</th>
                         <th>Tên phòng</th>
                         <th>Loại sản phẩm</th>
                         <th>Tên lớp</th>
                         <th>Ngày đặt</th>
                         <th>Tác nhân</th>
-                        <th>Thao tác</th>
+                        <th th:if="${#strings.contains(#request.requestURI, '/Lab/admin/LabBookingManagement/WaitComfirmUsed')}">
+                            TT sử dụng</th>
+                        <th>Thao tác <span th:if="${#strings.contains(#request.requestURI, '/Lab/admin/LabBookingManagement/WaitComfirmUsed')}">
+                            Xác nhận
+                        </span></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:each="booking, iter : ${bookingDTOs}">
+                        <td th:text="${iter.index + 1}"></td>
                         <td th:text="${booking.lab.labName}"></td>
                         <td style="max-width: 400px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
                             <span class="lab-info text-primary" th:text="${booking.experimentReport.reportType} +': '"> </span>
@@ -86,6 +96,12 @@
                             <div class="date-info">
                                 <span class="lab-info strong" th:if="${booking.auto != null}" th:text="${booking.auto}"></span>
                                 <span class="lab-info strong" th:if="${booking.auto == ''}" th:text="'Chưa có'"></span>
+                            </div>
+                        </td>
+                        <td th:if="${#strings.contains(#request.requestURI, '/Lab/admin/LabBookingManagement/WaitComfirmUsed')}">
+                            <div class="date-info">
+                                <span class="lab-info strong" th:text="${booking.comfirmUsed}"></span>
+                                <!--<span class="lab-info strong" th:if="${booking.auto == ''}" th:text="'Chưa có'"></span>-->
                             </div>
                         </td>
                         <td th:if="${#strings.contains(#request.requestURI, '/Lab/admin/LabBookingManagement/Pendding')}" >
@@ -117,6 +133,24 @@
                                 </form>
                             </div>
                         </td>
+                        <td th:if="${#strings.contains(#request.requestURI, '/Lab/admin/LabBookingManagement/WaitComfirmUsed')}" >
+                            <div class="d-flex justify-content-center align-content-center flex-row p-2">
+                                <form th:action="@{'/Lab/admin/LabBookingManagement/ComfirmUsed'}" method="get"
+                                      th:if="${booking.comfirmUsed == 'Chưa sử dụng'}">
+                                    <input type="hidden" name="bookingId" th:value="${booking.getId}">
+                                    <input type="hidden" name="username" th:value="${#authentication.name}">
+                                    <button type="submit" class="btn btn-success mx-2" onclick="return confirm('Bạn có chắc chắn muốn SỬ DỤNG không?')">Dùng</button>
+                                </form>
+                                <form th:action="@{'/Lab/admin/LabBookingManagement/ComfirmUsed'}" method="get"
+                                      th:if="${booking.comfirmUsed == 'Chưa sử dụng'}">
+                                    <input type="hidden" name="bookingId" th:value="${booking.getId}">
+                                    <input type="hidden" name="username" th:value="${#authentication.name}">
+                                    <button type="submit" class="btn btn-danger mx-2" onclick="return confirm('Bạn có chắc chắn muốn HỦY không?')">Hủy</button>
+                                </form>
+                                <span class="text-success font-weight-bold" th:if="${booking.comfirmUsed == 'Đã sử dụng'}"> GV đã xác nhận <br> sử dụng phòng</span>
+                                <span class="text-danger font-weight-bold" th:if="${booking.comfirmUsed == 'Đã hủy'}"> GV Đã xác nhận <br> hủy phòng</span>
+                            </div>
+                        </td>
                         <td th:if="${#strings.contains(#request.requestURI, '/Lab/admin/LabBookingManagement/Cancel')}" >
                             <div class="d-flex justify-content-center align-content-center row">
                                 <a th:href="@{'/Lab/admin/ShowBookingCancel/' + ${booking.getId}}">
@@ -137,11 +171,14 @@
                 </tbody>
                 <tfoot>
                 <tr>
+                    <th>STT</th>
                     <th>Tên phòng</th>
                     <th>Loại sản phẩm</th>
                     <th>Tên lớp</th>
                     <th>Ngày đặt</th>
                     <th>Tác nhân</th>
+                    <th th:if="${#strings.contains(#request.requestURI, '/Lab/admin/LabBookingManagement/WaitComfirmUsed')}">
+                        TT sử dụng</th>
                     <th>Thao tác</th>
                 </tr>
                 </tfoot>
