--- a/Lab_Management.v1/src/main/resources/templates/admin/equipments.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipments.html
@@ -12,7 +12,7 @@
 <body class="scroll-container">
 
 <equipment><!--<div th:replace="admin/templateAdmin.html :: header-admin"></div>-->
-    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;" th:text="'Danh sách thiết bị Chưa được sử dụng'"> </h1>
+    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;" th:text="'Danh sách thiết bị '"><span th:if="${#request.requestURI == '/Lab/admin/Equipment'}">Chưa được sử dụng</span> </h1>
     <h1 style=" text-align: center; font-size: 2em" th:text="'Số lượng: ' + ${#lists.size(allEquipment)}"></h1>
     <br>
     <div class="row">
@@ -64,8 +64,13 @@
                                         </button>
                                     </form>
                                 </th:block>
-                                <th:block th:if="${#request.requestURI == '/Lab/admin/AllEquipment'}">
-                                    <form th:action="@{'/Lab/admin/AllEquipment/showFormForUpdate/' + ${equi.getId}}" method="get">
+                                <th:block th:if="${#request.requestURI == '/Lab/admin/AllEquipment'}" sec:authorize="hasRole('ROLE_ADMIN')">
+                                    <form th:action="@{'/Lab/admin/AllEquipment/showAll/' + ${equi.getId}}" method="get">
+                                        <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
+                                    </form>
+                                </th:block>
+                                <th:block th:if="${#request.requestURI == '/Lab/admin/AllEquipment'}"  sec:authorize="hasRole('ROLE_MANAGER')">
+                                    <form th:action="@{'/Lab/admin/AllEquipment/showForManager/' + ${equi.getId}}" method="get">
                                         <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
                                     </form>
                                 </th:block>
